apps/paperless/migrate.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: migrate
  name: migrate
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: migrate
  serviceName: migrate
  template:
    metadata:
      labels:
        app: migrate
    spec:
      containers:
      - image: docker.io/alpine:latest
        name: shell
        command: [ "/bin/sh", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        volumeMounts:
          - name: source-data
            mountPath: /source
          - name: source-media
            mountPath: /source_pg
          - name: dest-data
            mountPath: /dest
          - name: dest-media
            mountPath: /dest_pg
      volumes:
        - name: source-data
          persistentVolumeClaim:
            claimName: paperless-data-dr
        - name: dest-data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: source-media
          persistentVolumeClaim:
            claimName: paperless-media-dr
        - name: dest-media
          persistentVolumeClaim:
            claimName: paperless-media
